@@ -77,6 +77,9 @@ pypet 0.1b.10
 
 *   CAP values are now in `%`, so choose values between 0.0 and 100.0
 
+*   BUG FIX: Links removed during single runs are now no longer stored
+
+
 pypet 0.1b.9
 
 *   BUG FIX: Fixed backwards compatibility
